--- a/src/main/resources/templates/authors/slug.html
+++ b/src/main/resources/templates/authors/slug.html
@@ -19,15 +19,15 @@
   <!--meta( http-equiv="expires" content="0")-->
   <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
   <link href="../../../../../../../spring-frontend/favicon.ico" rel="shortcut icon">
-  <link rel="preload" href="/static/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/static/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/static/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/static/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
-  <link rel="stylesheet" href="/static/assets/css/fonts.min.css?v=93601584">
-  <link rel="stylesheet" href="/static/assets/css/basic.min.css?v=93601584">
-  <link rel="stylesheet" href="/static/assets/css/extra.min.css?v=93601584"><!--[if lt IE 9]>
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=93601584">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=93601584">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=93601584"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script defer src="/static/assets/js/scripts.min.js?v=93601584"></script>
+  <script defer src="/assets/js/scripts.min.js?v=93601584"></script>
 </head>
 <body class="Site">
   <!--if lt IE 8
@@ -43,7 +43,7 @@
     <div class="Header-rowMain">
       <div class="wrap">
         <div class="row">
-          <div class="row-block Header-logo"><a class="logo" href="/"><img class="logo-image" src="/static/assets/img/logo.png" alt="logo.png"/><span class="logo-text">BOOKSHOP</span></a>
+          <div class="row-block Header-logo"><a class="logo" href="/bookshop/main"><img class="logo-image" src="/assets/img/logo.png" alt="logo.png"/><span class="logo-text">BOOKSHOP</span></a>
           </div>
           <div class="Header-searchWrap row-block">
             <div class="Header-searchLink"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"><g><g><path fill="#b8b8b8" d="M17.812 17.852c.25.268.25.69 0 .948a.622.622 0 0 1-.457.2.64.64 0 0 1-.457-.2l-5.364-5.494a7.07 7.07 0 0 1-4.32 1.47C3.232 14.777 0 11.457 0 7.389 0 3.321 3.232 0 7.214 0c3.983 0 7.214 3.32 7.214 7.388 0 1.94-.74 3.7-1.926 5.015zM7.214 13.44c3.264 0 5.909-2.708 5.909-6.05 0-3.344-2.655-6.052-5.909-6.052-3.264 0-5.908 2.72-5.908 6.051 0 3.332 2.644 6.051 5.908 6.051z"/></g></g></svg>
@@ -76,15 +76,15 @@
       <div class="wrap">
         <nav class="menuModal" id="navigate">
           <ul class="menu menu_main">
-            <li class="menu-item"><a class="menu-link" href="/index.html">Главная</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/main">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/templates/genrestes/genres/index.html">Жанры</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+            <li class="menu-item"><a class="menu-link" href="/templates/booksates/books/recent.html">Новинки</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+            <li class="menu-item"><a class="menu-link" href="/templates/booksates/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/authors/index">Авторы</a>
             </li>
           </ul>
         </nav>
@@ -95,9 +95,9 @@
     <div class="wrap">
       <main class="Middle-main">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+          <li class="breadcrumbs-item"><a href="/bookshop/main">Главная</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/authors/index.html">Авторы</a>
+          <li class="breadcrumbs-item"><a href="/bookshop/authors/index">Авторы</a>
           </li>
           <li class="breadcrumbs-item breadcrumbs-item_current"><span>Борис Васильевич Бедный</span>
           </li>
@@ -109,7 +109,7 @@
           </div>
           <div class="Spoiler">
             <div class="Spoiler-visible">
-              <div class="pict pict_left"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/>
+              <div class="pict pict_left"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
               </div>
               <div>
                 <h2>Биография
@@ -154,9 +154,9 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                       <div class="Card-sale">30% скидка
-                      </div><a class="Card-status" title="Отложена"><img src="/static/assets/img/icons/heart.svg" alt="heart.svg"/></a>
+                      </div><a class="Card-status" title="Отложена"><img src="/assets/img/icons/heart.svg" alt="heart.svg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Техника</a>
@@ -172,7 +172,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a><a class="Card-status" title="Куплена"><img src="/static/assets/img/icons/check.svg" alt="check.svg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a><a class="Card-status" title="Куплена"><img src="/assets/img/icons/check.svg" alt="check.svg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Английский язык. 5 класс. Английский в фокусе. Рабочая тетрадь. ФГОС</a>
@@ -188,7 +188,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                       <div class="Card-sale">30% скидка
                       </div>
                       <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
@@ -208,7 +208,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
@@ -224,7 +224,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a><a class="Card-status" title="В корзине"><img src="/static/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a><a class="Card-status" title="В корзине"><img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
@@ -240,7 +240,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
@@ -256,7 +256,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
@@ -272,7 +272,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
@@ -288,7 +288,7 @@
               <div class="Slider-item">
                 <div class="Slider-content">
                   <div class="Card">
-                    <div class="Card-picture"><a href="#"><img src="/static/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                    <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                     </div>
                     <div class="Card-content">
                       <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
@@ -307,7 +307,7 @@
               </div>
             </div>
           </div>
-          <footer class="Section-footer"><a class="Author-books" href="/books/author.html">Все книги автора<span class="Author-amount">(55)</span></a>
+          <footer class="Section-footer"><a class="Author-books" href="/templates/booksates/books/author.html">Все книги автора<span class="Author-amount">(55)</span></a>
           </footer>
         </div>
       </main>
@@ -316,7 +316,7 @@
   <footer class="Footer">
     <div class="wrap">
       <div class="row Footer-main">
-        <div class="row-block"><a class="logo logo_footer Footer-logo" href="/"><img class="logo-image" src="/static/assets/img/logo_footer.png" alt="logo_footer.png"/><span class="logo-text">BOOKSHOP</span></a>
+        <div class="row-block"><a class="logo logo_footer Footer-logo" href="/bookshop/main"><img class="logo-image" src="/assets/img/logo_footer.png" alt="logo_footer.png"/><span class="logo-text">BOOKSHOP</span></a>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
           </p>
           <ul class="menu menu_img menu_smallImg Footer-menuSoc">
@@ -334,15 +334,15 @@
         </div>
         <div class="row-block">
           <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="/index.html">Главная</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/main">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/templates/genrestes/genres/index.html">Жанры</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+            <li class="menu-item"><a class="menu-link" href="/templates/booksates/books/recent.html">Новинки</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+            <li class="menu-item"><a class="menu-link" href="/templates/booksates/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/authors/index">Авторы</a>
             </li>
           </ul>
         </div>
@@ -367,5 +367,5 @@
       </div>
     </div>
   </footer>
-  <script src="/static/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
+  <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
 </body></html>
