--- a/src/main/resources/frontend/fragments/header_fragment.html
+++ b/src/main/resources/frontend/fragments/header_fragment.html
@@ -41,7 +41,7 @@
                 <ul class="menu menu_main">
                     <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/index.html" th:href="@{/}">Главная</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+                    <li class="menu-item"><a class="menu-link" href="/genres/index.html" th:href="@{/genres}">Жанры</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
                     </li>
