--- a/src/main/resources/frontend/fragments/header_fragment.html
+++ b/src/main/resources/frontend/fragments/header_fragment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
-<header class="Header" th:fragment="headFragment">
+<header class="Header" th:fragment="headerFragment">
     <div class="Header-rowMain">
         <div class="wrap">
             <div class="row">
