--- a/src/main/resources/frontend/fragments/footer_fragment.html
+++ b/src/main/resources/frontend/fragments/footer_fragment.html
@@ -71,29 +71,39 @@
             </div>
             <div class="row-block">
                 <ul class="menu menu_vt Footer-menu">
-                    <li class="menu-item"><a class="menu-link" href="/index.html" th:href="@{/}">Главная</a>
+                    <li class="menu-item"><a class="menu-link" href="/index.html" th:href="@{/}" th:text="${#messages.msg('topbar.main')}">Главная</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/genres/index.html" th:href="@{/genres}">Жанры</a>
+                    <li class="menu-item"><a class="menu-link" href="/genres/index.html" th:href="@{/genres}" th:text="${#messages.msg('topbar.genres')}">Жанры</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:href="@{/books/recent}">Новинки</a>
+                    <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:href="@{/books/recent}" th:text="${#messages.msg('topbar.recent')}">Новинки</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:href="@{/books/popular}">Популярное</a>
+                    <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:href="@{/books/popular}" th:text="${#messages.msg('topbar.popular')}">Популярное</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/authors/index.html" th:href="@{/authors}">Авторы</a>
+                    <li class="menu-item"><a class="menu-link" href="/authors/index.html" th:href="@{/authors}" th:text="${#messages.msg('topbar.authors')}">Авторы</a>
                     </li>
                 </ul>
             </div>
             <div class="row-block">
                 <ul class="menu menu_vt Footer-menu">
-                    <li class="menu-item"><a class="menu-link" href="/signin.html" th:href="@{/signin}">Войти</a>
+                    <li class="menu-item"><a class="menu-link" href="/signin.html" th:href="@{/signin}" th:text="${#messages.msg('footer.signin')}">Войти</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/documents/index.html" th:href="@{/documents}">Документы</a>
+                    <li class="menu-item"><a class="menu-link" href="/documents/index.html" th:href="@{/documents}" th:text="${#messages.msg('footer.documents')}">Документы</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/about.html" th:href="@{/about}">О компании</a>
+                    <li class="menu-item"><a class="menu-link" href="/about.html" th:href="@{/about}" th:text="${#messages.msg('footer.about')}">О компании</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/faq.html" th:href="@{/faq}">Помощь</a>
+                    <li class="menu-item"><a class="menu-link" href="/faq.html" th:href="@{/faq}" th:text="${#messages.msg('footer.faq')}">Помощь</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/contacts.html" th:href="@{/contacts}">Контакты</a>
+                    <li class="menu-item"><a class="menu-link" href="/contacts.html" th:href="@{/contacts}" th:text="${#messages.msg('footer.contacts')}">Контакты</a>
+                    </li>
+                    <li class="menu-item">
+              <span th:text="${#messages.msg('footer.lang')}">
+                Выбор языка
+              </span>
+                        <select id="locales">
+                            <option value=" "></option>
+                            <option value="en">English</option>
+                            <option value="ru">Русский</option>
+                        </select>
                     </li>
                 </ul>
             </div>
