--- a/src/main/resources/frontend/fragments/head_fragment.html
+++ b/src/main/resources/frontend/fragments/head_fragment.html
@@ -18,5 +18,16 @@
     <link rel="stylesheet" href="/assets/css/extra.min.css?v=74020866"><!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script defer src="/assets/js/scripts.min.js?v=74020866"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"/>
+    <script type="javascript">
+        $(document).ready(function () {
+            $("#locales").change(function () {
+                var selectedOption = $('#locales').val();
+                 if (selectedOption !== '') {
+                    window.location.replace('?lang=' + selectedOption);
+                 }
+            });
+        });
+    </script>
 </head>
 </html>
