--- a/src/main/resources/frontend/fragments/header_fragment.html
+++ b/src/main/resources/frontend/fragments/header_fragment.html
@@ -39,15 +39,15 @@
         <div class="wrap">
             <nav class="menuModal" id="navigate">
                 <ul class="menu menu_main">
-                    <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/index.html" th:href="@{/}">Главная</a>
+                    <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/index.html" th:href="@{/}" th:text="${#messages.msg('topbar.main')}">Главная</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/genres/index.html" th:href="@{/genres}">Жанры</a>
+                    <li class="menu-item"><a class="menu-link" href="/genres/index.html" th:href="@{/genres}" th:text="${#messages.msg('topbar.genres')}">Жанры</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:href="@{/books/recent}">Новинки</a>
+                    <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:href="@{/books/recent}" th:text="${#messages.msg('topbar.recent')}">Новинки</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:href="@{/books/popular}">Популярное</a>
+                    <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:href="@{/books/popular}" th:text="${#messages.msg('topbar.popular')}">Популярное</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/authors/index.html" th:href="@{/authors}">Авторы</a>
+                    <li class="menu-item"><a class="menu-link" href="/authors/index.html" th:href="@{/authors}" th:text="${#messages.msg('topbar.authors')}">Авторы</a>
                     </li>
                 </ul>
             </nav>
