--- a/src/main/resources/frontend/fragments/header_fragment.html
+++ b/src/main/resources/frontend/fragments/header_fragment.html
@@ -20,6 +20,8 @@
                             </form>
                         </div>
                     </div>
+                    <span th:if="${searchError}" th:text="${searchError.getLocalizedMessage()}"
+                    style="color: red"></span>
                 </div>
                 <div class="row-block Header-cart">
                     <div class="CartBlock"><a class="CartBlock-block" href="/postponed.html" th:href="@{/postponed}">
