--- a/src/main/resources/frontend/fragments/header_fragment.html
+++ b/src/main/resources/frontend/fragments/header_fragment.html
@@ -36,7 +36,7 @@
                           style="color: red"></span>
                 </div>
                 <div class="row-block Header-cart">
-                    <div class="CartBlock"><a class="CartBlock-block" href="/postponed.html" th:href="@{/postponed}">
+                    <div class="CartBlock"><a class="CartBlock-block" href="/postponed.html" th:href="@{/books/postponed}">
                         <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" height="23" width="23"
                              viewBox="0 0 512 512">
                             <g>
